[package]
name = "sp-rs-wasm"
version = "0.1.0"
authors = ["xthexder"]
edition = "2021"
license-file = "../../LICENSE-MPL-2.0"

[features]
default = ["api", "wasm"]
api = []
wasm = ["dep:wasmer", "dep:static_assertions"]

[dependencies]
cxx = "1.0"
static_assertions = { version = "1.1", optional = true }
wasmer = { version = "2.1", optional = true }

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
