[package]
name = "sp-rs"
version = "0.1.0"
authors = ["xthexder", "nauscar"]
edition = "2021"
license-file = "../../LICENSE-MPL-2.0"

[features]
default = ["api", "wasm", "winit"]
api = []
wasm = ["dep:wasmer", "dep:static_assertions"]
winit = ["dep:vulkano", "dep:winit"]

[dependencies]
cxx = "1.0"
static_assertions = { version = "1.1", optional = true }
vulkano = { git = "https://github.com/xthexder/vulkano.git", optional = true }
winit = { git = "https://github.com/rust-windowing/winit.git", optional = true }
wasmer = { version = "2.1", optional = true }
raw-window-handle = "0.5"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]

[patch.crates-io]
winit = { git = "https://github.com/rust-windowing/winit.git" }
