[package]
name = "sp-rs"
version = "0.1.0"
authors = ["xthexder", "nauscar"]
edition = "2021"
license-file = "../../LICENSE-MPL-2.0"

[features]
default = ["api", "wasm", "window"]
api = []
wasm = ["dep:wasmer", "dep:static_assertions"]
window = ["dep:vulkano", "dep:winit"]

[dependencies]
cxx = "1.0"
static_assertions = { version = "1.1", optional = true }
vulkano = { version = "0.34", optional = true }
winit = { version = "0.29", optional = true, features = ["rwh_05"]}
wasmer = { version = "2.1", optional = true }
raw-window-handle = "0.5"

[build-dependencies]
cxx-build = "1.0"

[lib]
crate-type = ["staticlib"]
