#
# Stray Photons - Copyright (C) 2023 Jacob Wirth & Justin Li
#
# This Source Code Form is subject to the terms of the Mozilla Public License, v. 2.0.
# If a copy of the MPL was not distributed with this file, You can obtain one at https://mozilla.org/MPL/2.0/.
#

add_subdirectory(common)
add_subdirectory(core)
add_subdirectory(exports)
add_subdirectory(game)
add_subdirectory(graphics)
add_subdirectory(physics)
add_subdirectory(scripts)
